--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!--DOCTYPE html-->
 <html>
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src='jquery-2.1.4.min.js'></script>
     <script src="handlebars-v3.0.3.js"></script>
@@ -12,40 +13,42 @@
   	{{#each this}}
     	<div id="group{{plus1 @index}}" class="animate js-animate">
         <h2>Group {{plus1 @index}}:</h2>{{#each this}}
-			<p>{{this}}</p>
+			<p>{{plus1 @index}}. {{this}}</p>
     	{{/each}}
     </div>
     {{/each}}
   </div>
 </script>
     <div id="container">
-        <h1>Group Randomizer</h1>
+          <h1><b id="delta">Δ</b> Cohort Group Randomizer</h1>
         <div id="control-panel">
             <div id="instructions">Do some stuff with buttons to make groups.</div>
             <div id="num-of-teams">
-                <p>Number of Teams: </p>
-                <button class="js-num-teams" data-num="2">2</button>
-                <button class="js-num-teams" data-num="3">3</button>
-                <button class="js-num-teams" data-num="4">4</button>
-                <button class="js-num-teams" data-num="5">5</button>
-                <button class="js-num-teams" data-num="6">6</button>
-                <button class="js-num-teams" data-num="7">7</button>
-                <button class="js-num-teams" data-num="8">8</button>
-                <button class="js-num-teams" data-num="9">9</button>
-                <button class="js-num-teams" data-num="10">10</button>
-                <button id="generator">Generate!</button>
+                <p><b>Number of Teams: </b></p>
+                <button class="js-num-teams btn btn-primary" data-num="2">2</button>
+                <button class="js-num-teams btn btn-primary" data-num="3">3</button>
+                <button class="js-num-teams btn btn-primary" data-num="4">4</button>
+                <button class="js-num-teams btn btn-primary" data-num="5">5</button>
+                <button class="js-num-teams btn btn-primary" data-num="6">6</button>
+                <button class="js-num-teams btn btn-primary" data-num="7">7</button>
+                <button class="js-num-teams btn btn-primary" data-num="8">8</button>
+                <button class="js-num-teams btn btn-primary" data-num="9">9</button>
+                <button class="js-num-teams btn btn-primary" data-num="10">10</button>
             </div>
             <div id="team-size">
-                <p>Team Size: </p>
-                <button class="js-team-size" data-num="2">2</button>
-                <button class="js-team-size" data-num="3">3</button>
-                <button class="js-team-size" data-num="4">4</button>
-                <button class="js-team-size" data-num="5">5</button>
-                <button class="js-team-size" data-num="6">6</button>
-                <button class="js-team-size" data-num="7">7</button>
-                <button class="js-team-size" data-num="8">8</button>
-                <button class="js-team-size" data-num="9">9</button>
-                <button class="js-team-size" data-num="10">10</button>
+                <p><b>Team Size:</b></p>
+                <button class="js-team-size btn btn-primary" data-num="2">2</button>
+                <button class="js-team-size btn btn-primary" data-num="3">3</button>
+                <button class="js-team-size btn btn-primary" data-num="4">4</button>
+                <button class="js-team-size btn btn-primary" data-num="5">5</button>
+                <button class="js-team-size btn btn-primary" data-num="6">6</button>
+                <button class="js-team-size btn btn-primary" data-num="7">7</button>
+                <button class="js-team-size btn btn-primary" data-num="8">8</button>
+                <button class="js-team-size btn btn-primary" data-num="9">9</button>
+                <button class="js-team-size btn btn-primary" data-num="10">10</button>
+              </div>
+              <div id="generator-button">
+                <button id="generator" class="btn btn-danger">Generate!</button>
             </div>
         </div>
         <div id="group-container" class="hidden"></div>
