Initial EJS commit.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src='jquery-2.1.4.min.js'></script>
     <script src="handlebars-v3.0.3.js"></script>
+    <script src="ejs_0.9_alpha_1_production.js"></script>
     <script src="scripts.js"></script>
 </head>
 <body>
